# WindowSweep

./: .gitignore  Cargo.toml  README.md
src/: main.rs
window-sweep-lib/: Cargo.toml
window-sweep-lib/src/: lib.rs
window-sweep-lib/src/io/: mod.rs  segment.rs  walk.rs
window-sweep-lib/src/plugins/: dfa_plugin.rs  mod.rs
